<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tennis_demo_behaviorized</name>
  <version>0.0.1</version>
  <description>Behavior Tree logic for Go Fetch Demo, contains all navigation and manipulation logic.</description>
  <maintainer email="andonbreitenfeld@utexas.edu">Andon Breitenfeld</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>behaviortree_cpp</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>spot_behaviors</depend>
  <depend>nrg_utility_behaviors</depend>
  <depend>nrg_navigation_behaviors</depend>
  <depend>ament_index_cpp</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>